@@ -21,6 +21,9 @@ not yet  BJH  Release 10.66.00
               make package: Include a man/web directory with .url files for
               each manual page.
 
+              test: Add -portrait to invocations of pstopnm in order to get
+              proper round trips.
+
 13.12.26 BJH  Release 10.65.00
 
               pamfunc: add -changemaxval.
